--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,19 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
-  color: #f5f5f5;
+  color: rgb(253, 249, 249);
+}
+
+.header {
+  width: 100%;
+  height: 95vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(41, 42, 43, 0.801),
+      rgba(42, 46, 73, 0.815)
+    ),
+    url('../img/hero.jpg');
+  background-size: cover;
+  background-position: bottom;
+  /* z-index: 1; */
 }
