--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: rgb(253, 249, 249);
-  padding: 30px;
+  padding: 13px;
 }
 
 .header {
@@ -24,5 +24,6 @@ body {
     url('../img/hero.jpg');
   background-size: cover;
   background-position: bottom;
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0% 100%);
   /* z-index: 1; */
 }
