Add    - logo    - logo styles    - remove generated identifier images    - remove commented styles

--- a/css/style.css
+++ b/css/style.css
@@ -25,5 +25,15 @@ body {
   background-size: cover;
   background-position: bottom;
   clip-path: polygon(0 0, 100% 0, 100% 80vh, 0% 100%);
-  /* z-index: 1; */
+  position: relative;
+}
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.logo {
+  height: 35px;
 }
