--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
@@ -36,4 +36,30 @@ body {
 
 .logo {
   height: 35px;
+}
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.heading-primary-main {
+  display: block;
+  font-size: 80px;
+  font-weight: 400;
+  letter-spacing: 65px;
+}
+
+.heading-primary-sub {
+  display: block;
+  font-size: 17px;
+  font-weight: 700;
+  letter-spacing: 3px;
 }
