Add button animation

--- a/css/style.css
+++ b/css/style.css
@@ -38,32 +38,36 @@ body {
   height: 35px;
 }
 
-.heading-primary {
-  color: #fff;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-}
-
 .text-box {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 20px;
 }
 
 .heading-primary-main {
   display: block;
   font-size: 80px;
-  font-weight: 400;
-  letter-spacing: 65px;
+  font-weight: 700;
+  letter-spacing: 88px;
+  /* font-family: 'Indie Flower', cursive; */
   animation: moveInLeft 1s ease-out;
 }
 
 .heading-primary-sub {
   display: block;
-  font-size: 17px;
-  font-weight: 400;
-  letter-spacing: 3px;
+  font-size: 15px;
+  font-weight: 2 00;
+  letter-spacing: 9px;
+  font-family: 'Indie Flower', cursive;
   animation: moveInRight 1s ease-out;
 }
 
@@ -95,4 +99,74 @@ body {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 6px;
+  border: 0.3px solid rgb(252, 245, 245);
+  transition: all 0.5s;
+  position: relative;
+}
+
+.btn-white {
+  background-color: rgb(22, 21, 21);
+  color: rgb(252, 245, 245);
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.7);
+}
+
+.btn::after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.5s;
+}
+
+.btn-white::after {
+  background-color: rgb(22, 21, 21);
+  border: 0.5px solid rgb(252, 245, 245);
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  80% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.btn-animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards;
 }
