--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,10 @@ body {
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 10px 20px rgba(7, 7, 7, 0.7);
+  background-color: rgb(10, 10, 10);
+  color: rgb(241, 229, 229);
+  border: 0.2px solid rgb(247, 244, 244);
 }
 
 .btn:active {
@@ -142,7 +145,7 @@ body {
 }
 
 .btn-white::after {
-  background-color: rgb(22, 21, 21);
+  background-color: rgb(10, 10, 10);
   border: 0.5px solid rgb(252, 245, 245);
 }
 
