--- a/css/style.css
+++ b/css/style.css
@@ -28,17 +28,17 @@ body {
   position: relative;
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   top: 40px;
   left: 40px;
 }
 
-.logo {
+.header__logo {
   height: 35px;
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -53,7 +53,7 @@ body {
   margin-bottom: 20px;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-size: 80px;
   font-weight: 700;
@@ -62,7 +62,7 @@ body {
   animation: moveInLeft 1s ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 15px;
   font-weight: 2 00;
@@ -113,7 +113,7 @@ body {
   position: relative;
 }
 
-.btn-white {
+.btn--white {
   background-color: rgb(22, 21, 21);
   color: rgb(252, 245, 245);
 }
@@ -144,7 +144,7 @@ body {
   transition: all 0.5s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: rgb(10, 10, 10);
   border: 0.5px solid rgb(252, 245, 245);
 }
@@ -169,7 +169,7 @@ body {
   }
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards;
 }
