--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,45 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
-  color: rgb(253, 249, 249);
-  padding: 13px;
-}
+  color: #fdf9f9;
+  padding: 13px; }
 
 .header {
   width: 100%;
   height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(23, 24, 26, 0.603),
-      rgba(8, 10, 19, 0.925)
-    ),
-    url('../img/hero.jpg');
+  background-image: linear-gradient(to right bottom, #17181a9a, #080a13ec), url("../img/hero.jpg");
   background-size: cover;
   background-position: bottom;
   clip-path: polygon(0 0, 100% 0, 100% 80vh, 0% 100%);
-  position: relative;
-}
+  position: relative; }
 
 .header__logo-box {
   position: absolute;
   top: 40px;
-  left: 40px;
-}
+  left: 40px; }
 
 .header__logo {
-  height: 69px;
-}
+  height: 69px; }
 
 .header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
-}
+  text-align: center; }
 
 .heading-primary {
-  color: #fff;
+  color: #fdf9f9;
   text-transform: uppercase;
   backface-visibility: hidden;
-  margin-bottom: 20px;
-}
+  margin-bottom: 20px; }
 
 .heading-primary--main {
   display: block;
@@ -59,8 +47,7 @@ body {
   font-weight: 700;
   letter-spacing: 88px;
   /* font-family: 'Indie Flower', cursive; */
-  animation: moveInLeft 1s ease-out;
-}
+  animation: moveInLeft 1s ease-out; }
 
 .heading-primary--sub {
   display: block;
@@ -68,38 +55,29 @@ body {
   font-weight: 2 00;
   letter-spacing: 9px;
   font-family: 'Indie Flower', cursive;
-  animation: moveInRight 1s ease-out;
-}
+  animation: moveInRight 1s ease-out; }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
-  }
+    transform: translateX(-100px); }
   80% {
     opacity: 1;
-    transform: translateX(20px);
-  }
+    transform: translateX(20px); }
   100% {
     opacity: 1;
-    transform: translateX(0);
-  }
-}
+    transform: translateX(0); } }
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
-  }
+    transform: translateX(100px); }
   80% {
     opacity: 1;
-    transform: translateX(-20px);
-  }
+    transform: translateX(-20px); }
   100% {
     opacity: 1;
-    transform: translateX(0);
-  }
-}
+    transform: translateX(0); } }
 
 .btn:link,
 .btn:visited {
@@ -108,28 +86,24 @@ body {
   padding: 15px 40px;
   display: inline-block;
   border-radius: 6px;
-  border: 0.3px solid rgb(252, 245, 245);
+  border: 0.3px solid #fdf9f9;
   transition: all 0.5s;
-  position: relative;
-}
+  position: relative; }
 
 .btn--white {
-  background-color: rgb(22, 21, 21);
-  color: rgb(252, 245, 245);
-}
+  background-color: #17181a9a;
+  color: #fdf9f9; }
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(7, 7, 7, 0.7);
-  background-color: rgb(10, 10, 10);
-  color: rgb(241, 229, 229);
-  border: 0.2px solid rgb(247, 244, 244);
-}
+  box-shadow: 0 10px 20px #080a13ec;
+  background-color: #080a13ec;
+  color: #fdf9f9;
+  border: 0.2px solid #fdf9f9; }
 
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.7);
-}
+  box-shadow: 0 5px 10px #080a13ec; }
 
 .btn::after {
   content: '';
@@ -141,35 +115,27 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all 0.5s;
-}
+  transition: all 0.5s; }
 
 .btn--white::after {
-  background-color: rgb(10, 10, 10);
-  border: 0.5px solid rgb(252, 245, 245);
-}
+  background-color: #080a13ec;
+  border: 0.5px solid #fdf9f9; }
 
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
+  opacity: 0; }
 
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(100px);
-  }
+    transform: translateY(100px); }
   80% {
     opacity: 1;
-    transform: translateX(0);
-  }
+    transform: translateX(0); }
   100% {
     opacity: 1;
-    transform: translateX(0);
-  }
-}
+    transform: translateX(0); } }
 
 .btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
-  animation-fill-mode: backwards;
-}
+  animation-fill-mode: backwards; }
