--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,15 @@
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%; }
 
 body {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.7;
-  color: #fdf9f9;
-  padding: 13px; }
-
-.header {
-  width: 100%;
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, #17181a9a, #080a13ec), url("../img/hero.jpg");
-  background-size: cover;
-  background-position: bottom;
-  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0% 100%);
-  position: relative; }
-  .header__logo-box {
-    position: absolute;
-    top: 40px;
-    left: 40px; }
-  .header__logo {
-    height: 69px; }
-  .header__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
-
-.heading-primary {
-  color: #fdf9f9;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  margin-bottom: 20px; }
-  .heading-primary--main {
-    display: block;
-    font-size: 80px;
-    font-weight: 700;
-    letter-spacing: 88px;
-    /* font-family: 'Indie Flower', cursive; */
-    animation: moveInLeft 1s ease-out; }
-  .heading-primary--sub {
-    display: block;
-    font-size: 15px;
-    font-weight: 2 00;
-    letter-spacing: 9px;
-    font-family: 'Indie Flower', cursive;
-    animation: moveInRight 1s ease-out; }
+  box-sizing: border-box; }
 
 @keyframes moveInLeft {
   0% {
@@ -73,6 +32,45 @@ body {
   100% {
     opacity: 1;
     transform: translateX(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100px); }
+  80% {
+    opacity: 1;
+    transform: translateX(0); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+body {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #fdf9f9;
+  padding: 1.8rem; }
+
+.heading-primary {
+  color: #fdf9f9;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 20px; }
+  .heading-primary--main {
+    display: block;
+    font-size: 80px;
+    font-weight: 700;
+    letter-spacing: 88px;
+    /* font-family: 'Indie Flower', cursive; */
+    animation: moveInLeft 1s ease-out; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 15px;
+    font-weight: 2 00;
+    letter-spacing: 9px;
+    font-family: 'Indie Flower', cursive;
+    animation: moveInRight 1s ease-out; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -121,13 +119,23 @@ body {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; }
 
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(100px); }
-  80% {
-    opacity: 1;
-    transform: translateX(0); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
+.header {
+  width: 100%;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, #17181a9a, #080a13ec), url("../img/hero.jpg");
+  background-size: cover;
+  background-position: bottom;
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0% 100%);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px; }
+  .header__logo {
+    height: 69px; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
