--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,180 +1,12 @@
-$color-primary-light: #17181a9a;
-$color-primary-dark: #080a13ec;
-$color-light: #fdf9f9;
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import 'base/base';
+@import 'base/utilities';
+@import 'base/animation';
+@import 'base/typography';
 
-body {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.7;
-  color: $color-light;
-  padding: 13px;
-}
-
-.header {
-  width: 100%;
-  height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      $color-primary-light,
-      $color-primary-dark
-    ),
-    url('../img/hero.jpg');
-  background-size: cover;
-  background-position: bottom;
-  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0% 100%);
-  position: relative;
-
-  &__logo-box {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-  }
-
-  &__logo {
-    height: 69px;
-  }
-
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-}
-
-.heading-primary {
-  color: $color-light;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  margin-bottom: 20px;
-
-  &--main {
-    display: block;
-    font-size: 80px;
-    font-weight: 700;
-    letter-spacing: 88px;
-    /* font-family: 'Indie Flower', cursive; */
-    animation: moveInLeft 1s ease-out;
-  }
-
-  &--sub {
-    display: block;
-    font-size: 15px;
-    font-weight: 2 00;
-    letter-spacing: 9px;
-    font-family: 'Indie Flower', cursive;
-    animation: moveInRight 1s ease-out;
-  }
-}
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-100px);
-  }
-  80% {
-    opacity: 1;
-    transform: translateX(20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(100px);
-  }
-  80% {
-    opacity: 1;
-    transform: translateX(-20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-.btn {
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 6px;
-    border: 0.3px solid $color-light;
-    transition: all 0.5s;
-    position: relative;
-  }
-
-  &--white {
-    background-color: $color-primary-light;
-    color: $color-light;
-    &::after {
-      background-color: $color-primary-dark;
-      border: 0.5px solid $color-light;
-    }
-  }
-
-  &:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px $color-primary-dark;
-    background-color: $color-primary-dark;
-    color: $color-light;
-    border: 0.2px solid $color-light;
-
-    &::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
-    }
-  }
-
-  &:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px $color-primary-dark;
-  }
-
-  &::after {
-    content: '';
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-radius: 6px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.5s;
-  }
-
-  &--animated {
-    animation: moveInBottom 0.5s ease-out 0.75s;
-    animation-fill-mode: backwards;
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(100px);
-  }
-  80% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
+@import 'components/button';
+@import 'layout/header';
+@import 'pages/home';
