--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,8 @@
 $color-primary-light: #17181a9a;
 $color-primary-dark: #080a13ec;
 $color-light: #fdf9f9;
+
+//Grid
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
