--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,5 +8,8 @@
 @import 'base/typography';
 
 @import 'components/button';
+
+@import 'layout/grid';
 @import 'layout/header';
+
 @import 'pages/home';
