--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,12 @@
 $color-primary-light: #17181a9a;
 $color-primary-dark: #080a13ec;
 $color-light: #fdf9f9;
+$color-light-1: #333131;
 
+$color-grey-1: #eff1f1;
+
+//font
+$default-font-size: 1.7rem;
 //Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
