--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -3,9 +3,9 @@
   &:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 6px;
+    border-radius: 0.6rem;
     border: 0.3px solid $color-light;
     transition: all 0.5s;
     position: relative;
@@ -54,5 +54,28 @@
   &--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary-dark;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary-dark;
+    padding: 3px;
+    transition: all 0.2s;
+  }
+  &:hover {
+    background-color: $color-primary-dark;
+    color: $color-light;
+    box-shadow: 0 1rem 2rem $color-primary-dark;
+    transform: translateY(-2px);
+  }
+  &:active {
+    box-shadow: 0 0.5rem 1rem $color-primary-dark;
+    transform: translateY(0);
   }
 }
