--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'base/typography';
 
 @import 'components/button';
+@import 'components/composition';
 
 @import 'layout/grid';
 @import 'layout/header';
