--- a/css/style.css
+++ b/css/style.css
@@ -275,3 +275,16 @@ body {
   transform: skewY(-7deg); }
   .section-gallery > * {
     transform: skewY(7deg); }
+
+.section-contact {
+  padding: 7rem 0;
+  margin-top: -20vh;
+  background-image: linear-gradient(to right bottom, #17181a9a, #17181a9a); }
+
+.contact {
+  margin-top: 20rem;
+  background-image: linear-gradient(105deg, rgba(51, 49, 49, 0.9) 0%, rgba(253, 249, 249, 0.9) 50%, transparent 50%), url(../img/contact-us-1.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5 4rem rgba(8, 10, 19, 0.8);
+  height: 50rem; }
