--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,3 +14,28 @@
     transform: skewY(7deg);
   }
 }
+
+.section-contact {
+  padding: 7rem 0;
+  margin-top: -20vh;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light,
+    $color-primary-light
+  );
+}
+
+.contact {
+  margin-top: 20rem;
+  background-image: linear-gradient(
+      105deg,
+      rgba($color-light-1, 0.9) 0%,
+      rgba($color-light, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../img/contact-us-1.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5 4rem rgba($color-primary-dark, 0.8);
+  height: 50rem;
+}
