--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,9 +2,12 @@ $color-primary-light: #17181a9a;
 $color-primary-dark: #080a13ec;
 $color-light: #fdf9f9;
 $color-light-1: #333131;
+$color-green-light: #00ff00;
+$color-green-dark: #303e7e;
 
 $color-grey-1: #eff1f1;
-
+$color-grey-2: #999;
+$color-secondary-dark: #ff5e00;
 //font
 $default-font-size: 1.7rem;
 //Grid
