--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -9,6 +10,12 @@
     border: 0.3px solid $color-light;
     transition: all 0.5s;
     position: relative;
+
+    border: none;
+    cursor: pointer;
+  }
+  &--green {
+    background-color: $color-green-dark;
   }
 
   &--white {
